noctel-gitops/networking/pdx1/prod/chirpstack-gateway-bridge-lb.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    metallb.universe.tf/address-pool: prod-vlan-pool
    metallb.universe.tf/allow-shared-ip: "prod-chirpstack"
  labels:
    app: chirpstack-gateway-bridge
    cilium.io/l2-pool: prod-vlan
  name: chirpstack-gateway-bridge-lb
  namespace: prod
spec:
  allocateLoadBalancerNodePorts: true
  externalTrafficPolicy: Cluster
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  loadBalancerIP: 10.0.99.80
  ports:
  - name: gateway
    port: 3001
    protocol: TCP
    targetPort: 3001
  selector:
    app: chirpstack-gateway-bridge
  sessionAffinity: None
  type: LoadBalancer
