noctel-gitops/networking/pdx1/prod/prod-api-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prod-api-ingress
  namespace: prod
spec:
  ingressClassName: traefik-prod
  rules:
  - host: pdx1-prod-api.telnoc.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: noctel-api-gateway
            port:
              number: 7100
