noctel-gitops/networking/pdx1/prod/prod-display-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prod-display-ingress
  namespace: prod
  annotations:
spec:
  ingressClassName: traefik-prod
  rules:
  - host: pdx1-prod-display.telnoc.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: noctel-display
            port:
              number: 3001

  tls:
  - hosts:
    - pdx1-prod-display.telnoc.com
